# NDS-Emulator

./: .gitignore  Cargo.toml  README.md
benches/: games.rs
bitfield/: Cargo.toml
bitfield/src/: lib.rs
bitfield/tests/: tests.rs
bitfield/tests/fail/: bad-base-type-1.rs  bad-base-type-1.stderr  bad-base-type-2.rs  bad-base-type-2.stderr  bad-base-type-3.rs  bad-base-type-3.stderr  bad-bool.rs  bad-bool.stderr  exceed-base-type.rs  exceed-base-type.stderr  invalid-range-bounds.rs  invalid-range-bounds.stderr  not-full.rs  not-full.stderr  overlapping-range-1.rs  overlapping-range-1.stderr  overlapping-range-2.rs  overlapping-range-2.stderr  overlapping-range.stderr  same-range-bounds.rs  same-range-bounds.stderr
core/: Cargo.toml
core/src/: arm.rs  hw.rs  lib.rs  nds.rs
core/src/arm/: arm.rs  instructions.rs  mod.rs  registers.rs  thumb.rs
core/src/arm7/: arm.rs  instructions.rs  mod.rs  registers.rs  thumb.rs
core/src/arm9/: arm.rs  cp15.rs  instructions.rs  mod.rs  registers.rs  thumb.rs
core/src/hw/: cartridge.rs  dma.rs  gpu.rs  header.rs  interrupt_controller.rs  ipc.rs  keypad.rs  math.rs  mem.rs  mod.rs  rtc.rs  scheduler.rs  spi.rs  spu.rs  timers.rs
core/src/hw/cartridge/: backup.rs  header.rs  key1_encryption.rs  mod.rs
core/src/hw/cartridge/backup/: eeprom.rs  flash.rs  game_db.rs  mod.rs  no_backup.rs
core/src/hw/gpu/: debug.rs  engine2d.rs  engine3d.rs  mod.rs  registers.rs  vram.rs
core/src/hw/gpu/engine2d/: mod.rs  registers.rs
core/src/hw/gpu/engine3d/: geometry.rs  math.rs  mod.rs  registers.rs  rendering.rs
core/src/hw/mem/: arm7.rs  arm9.rs  cp15.rs  mod.rs
core/src/hw/mem/arm7/: io.rs
core/src/hw/mem/arm9/: io.rs
core/src/hw/mmu/: arm7.rs  arm9.rs  cp15.rs  mod.rs
core/src/hw/spi/: firmware.rs  mod.rs  tsc.rs
core/src/hw/spu/: audio.rs  mod.rs  registers.rs
src/: debug.rs  display.rs  main.rs
src/debug/: mod.rs  windows.rs
