[package]
name = "nds-emulator"
version = "0.1.0"
authors = ["Akash Munagala <akash.munagala@gmail.com>"]
edition = "2018"

[workspace]
members = ["core"]

[dependencies]
imgui = "0.4.0"
imgui-opengl-renderer = "0.8.0"
gl = "0.14.0"
glfw = "0.39.0"
nds-core = { path = "core" }

[profile.release]
debug = true
