[package]
name = "nds-emulator"
version = "0.1.0"
authors = ["Akash Munagala <akash.munagala@gmail.com>"]
edition = "2018"

[workspace]
members = ["core"]

[dependencies]
imgui = "0.6.0"
imgui-opengl-renderer = "0.10.0"
gl = "0.14.0"
glfw = { version = "0.41.0", default-features = false }
nds-core = { path = "core" }

[profile.release]
debug = true
