[package]
name = "nds-emulator"
version = "0.1.0"
authors = ["Akash Munagala <akash.munagala@gmail.com>"]
edition = "2021"

[workspace]
members = ["core"]

[dependencies]
imgui = "0.7.0"
imgui-opengl-renderer = "0.11.0"
gl = "0.14.0"
glfw = "0.41.0"
nds-core = { path = "core" }

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "games"
harness = false
