[package]
name = "nds-core"
version = "0.1.0"
authors = ["Akash Munagala <akash.munagala@gmail.com>"]
edition = "2021"

[dependencies]
bitflags = "1.2.1"
bitfield = { path="../bitfield" }
bytemuck = "1.5.1"
cpal = "0.13.1"
chrono = "0.4.19"
log = "0.4.11"
memmap ="0.7.0"
num-traits = "0.2.12"
num-integer = "0.1.43"
priority-queue = "1.0.5"
ringbuf = "0.2.2"
simplelog = "0.10.0"
